# agentwatch

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: clickhouse_client.py  export_api.py  main.py  models.py  realtime.py  requirements.txt  team_api.py  team_models.py  team_storage.py  trace_service.py
backend/auth/: __init__.py  jwt.py  middleware.py  models.py  routes.py  service.py
backend/storage/: __init__.py  base.py  clickhouse.py  memory.py  sqlite.py
backend/tests/: test_api.py  test_auth.py  test_storage.py
docs/: API.md  API_REFERENCE.md  API_V2_PLAN.md  ARCHITECTURE.md  ASSET_ANALYSIS.md  AUTH_SYSTEM_DESIGN.md  BLOG_CN.md  BLOG_EN.md  DEMO_SCREENSHOTS.md  DEPLOYMENT.md  EVOLUTION_ROADMAP.md  HN_SHOW_HN.md  PRODUCT_HUNT.md  PROGRESS.md  USER_ACQUISITION.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  AuthContext.tsx  LanguageContext.tsx  api.test.ts  api.ts  authApi.ts  index.css
frontend/src/components/: About.tsx  ActivityFeed.tsx  Charts.tsx  ChartsEnhanced.tsx  CostAlerts.tsx  CostComparison.tsx  CostOptimization.tsx  Dashboard.tsx  Export.tsx  Login.tsx  Register.tsx  Settings.tsx  TraceDetail.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/locales/: en.ts  index.ts  zh.ts
frontend/src/test/: setup.ts
scripts/: init_clickhouse.sql
sdk/: README.md  pyproject.toml
sdk/agentwatch/: __init__.py  client.py  decorators.py  exceptions.py  providers.py  trace.py
sdk/examples/: basic_usage.py  claude_integration.py  complete_demo.py  deepseek_integration.py  openai_integration.py
sdk/tests/: __init__.py  test_client.py  test_decorators.py
