[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentwatch"
version = "0.1.0"
description = "AgentWatch SDK - AI Agent Monitoring Python Client"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "RaphaelL2e", email = "liyafei@sensetime.com"}
]
keywords = ["ai", "agent", "monitoring", "tracing", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/RaphaelL2e/agentwatch"
Documentation = "https://github.com/RaphaelL2e/agentwatch#readme"
Repository = "https://github.com/RaphaelL2e/agentwatch.git"

[tool.hatch.build.targets.wheel]
packages = ["agentwatch"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]