[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentwatch"
version = "0.7.1"
description = "AgentWatch SDK - Open-source AI Agent Monitoring Platform. Track traces, costs, and performance across OpenAI, Anthropic, DeepSeek, and Gemini."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    {name = "RaphaelL2e", email = "raphael.l2e@gmail.com"}
]
keywords = [
    "ai",
    "agent",
    "monitoring",
    "tracing",
    "observability",
    "llm",
    "openai",
    "anthropic",
    "claude",
    "deepseek",
    "gemini",
    "cost-tracking",
    "websocket",
    "dashboard",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

all = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/RaphaelL2e/agentwatch"
Documentation = "https://github.com/RaphaelL2e/agentwatch#readme"
Repository = "https://github.com/RaphaelL2e/agentwatch.git"
Issues = "https://github.com/RaphaelL2e/agentwatch/issues"
Changelog = "https://github.com/RaphaelL2e/agentwatch/releases"

[tool.hatch.build.targets.wheel]
packages = ["agentwatch"]

[tool.hatch.build.targets.sdist]
include = [
    "agentwatch/",
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]